--- a/.github/workflows/build-pipeline.yml
+++ b/.github/workflows/build-pipeline.yml
@@ -1,25 +1,22 @@
-name: AccentureWorkshop
+name: This is a workshop
 
 on:
   push:
-    branches: [ develop ]
+    branches: 
+    - master
   pull_request:
-    branches: [ develop ]
+    branches: 
+    - master
 
 jobs:
-  build:
+  print-comment
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js 14.x
-        uses: actions/setup-node@v2
-        with:
-          node-version: '14.x'
-      - name: Install dependencies
-        run: npm ci
+      - run: |
+          echo "This is a comment"
       # Step 3 - Add tests and linting here
+jobs:
   deploy:
-    needs: build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -29,4 +26,11 @@ jobs:
           node-version: '14.x'
       - name: Install dependencies
         run: npm ci
+      - name: Build
+        run: npm run build
+      - name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@4.1.4
+        with:
+          branch: gh-pages
+          folder: dist
       # Step 2: Add deploy to Github pages here! Hot tip - The solution is in the Readme
