build-pipeline.github/workflows/build-pipeline.yml

--- a/.github/workflows/build-pipeline.yml
+++ b/.github/workflows/build-pipeline.yml
@@ -9,12 +9,24 @@ on:
     - master
 
 jobs:
-  print-comment
+  print-comment:
     runs-on: ubuntu-latest
     steps:
       - run: |
           echo "This is a comment"
       # Step 3 - Add tests and linting here
+jobs:
+  add-beans:
+  grind-beans:
+    needs: add-beans
+  brew-coffee:
+    needs: [add-beans, grind-beans]
+    
+      - name: Run typescript lint and format check
+        run: npm run lint:ts
+      - name: Run styles lint and format check
+        run: npm run lint:css
+    
 jobs:
   deploy:
     runs-on: ubuntu-latest
