--- a/.github/workflows/build-pipeline.yml
+++ b/.github/workflows/build-pipeline.yml
@@ -1,34 +1,25 @@
-name: This is a workshop
+name: AccentureWorkshop
 
 on:
   push:
-    branches: 
-    - master
+    branches: [ develop ]
   pull_request:
-    branches: 
-    - master
+    branches: [ develop ]
 
 jobs:
-  print-comment:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - run: |
-          echo "This is a comment"
+      - uses: actions/checkout@v2
+      - name: Use Node.js 14.x
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14.x'
+      - name: Install dependencies
+        run: npm ci
       # Step 3 - Add tests and linting here
-jobs:
-  add-beans:
-  grind-beans:
-    needs: add-beans
-  brew-coffee:
-    needs: [add-beans, grind-beans]
-    
-      - name: Run typescript lint and format check
-        run: npm run lint:ts
-      - name: Run styles lint and format check
-        run: npm run lint:css
-    
-jobs:
   deploy:
+    needs: build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -45,4 +36,3 @@ jobs:
         with:
           branch: gh-pages
           folder: dist
-      # Step 2: Add deploy to Github pages here! Hot tip - The solution is in the Readme
