--- a/.github/workflows/build-pipeline.yml
+++ b/.github/workflows/build-pipeline.yml
@@ -17,10 +17,9 @@ jobs:
           node-version: '14.x'
       - name: Install dependencies
         run: npm ci
-      - name: Run typescript lint and format check
-        run: npm run lint:ts
-      - name: Run styles lint and format check
-        run: npm run lint:css
+      - name: test
+        run: npm test
+
   deploy:
     needs: build
     runs-on: ubuntu-latest
